--- a/app/views/beers/_sign_in.html.erb
+++ b/app/views/beers/_sign_in.html.erb
@@ -1,4 +1,9 @@
+<title>Sign in!</title>
 <h1>Sign in</h1>
+
+<% flash.each do |key, value| %>
+  <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+<% end %>
 
 <div class="row">
   <div class="span6 offset3">
