--- a/app/views/beers/_beer_list.html.erb
+++ b/app/views/beers/_beer_list.html.erb
@@ -1,23 +1,33 @@
-<h1>Search </h1>
+<title>New Beer!</title>
+<h1>Beer Search</h1>
 
 <div class="row">
   <div class="span6 offset3">
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+    <% end %>
+    
     <%= form_for :search do |f| %>
 
-      <%= f.text_field :beers %>
+      <%= f.text_field :beer %>
 
       <%= f.submit "Search", class: "btn btn-large btn-primary" %>
     <% end %>
+     
+    <script>
+    var xTriggered = 0;
+    $("#search_beers").keypress(function(event) {
+      if ( event.which == 13 ) {
+         event.preventDefault();
+         var text = $('#search_beers').val().trim();
+         // $.post("search", {search: text});
+       }
+    });
+    var pusher = new Pusher('b435db47fbb3781756ef');
+    var channel = pusher.subscribe('beer-channel');
+    channel.bind('beer-search-event', function(data) {
+      $(data.confession).css('display','none').addClass('new-push').insertBefore('#confessions div:first').slideDown();
+    });
+    </script>
   </div>
 </div>
-
-<p>
-Input beers: 
-<%= @input_beers %>
-<br>
-Spell checked:
-<%= @spell_checked %>
-<br>
-Results: 
-<%= @results %>
-</p>
