--- a/app/views/beers/_beer_list.html.erb
+++ b/app/views/beers/_beer_list.html.erb
@@ -6,28 +6,57 @@
     <% flash.each do |key, value| %>
       <%= content_tag(:div, value, class: "alert alert-#{key}") %>
     <% end %>
+    <input id="search_beer" placeholder="Beer..." name="search[beer]" size="30" type="text">
     
-    <%= form_for :search do |f| %>
-
-      <%= f.text_field :beer %>
-
-      <%= f.submit "Search", class: "btn btn-large btn-primary" %>
-    <% end %>
-     
-    <script>
-    var xTriggered = 0;
-    $("#search_beers").keypress(function(event) {
-      if ( event.which == 13 ) {
-         event.preventDefault();
-         var text = $('#search_beers').val().trim();
-         // $.post("search", {search: text});
-       }
-    });
-    var pusher = new Pusher('b435db47fbb3781756ef');
-    var channel = pusher.subscribe('beer-channel');
-    channel.bind('beer-search-event', function(data) {
-      $(data.confession).css('display','none').addClass('new-push').insertBefore('#confessions div:first').slideDown();
-    });
-    </script>
+    <!-- <li class="beers" >
+          test
+          <img alt='Busy' src='/assets/Haters_Gonna_Hate.gif' width = '40' align='right' >
+          <nobr style='color: #999;margin-left:20px;'>Did you mean</nobr>
+          <a href=#>some beer?</a>
+        </li> -->
   </div>
 </div>
+
+<script>
+var ENTER = 13;
+var beer_count = 0
+var image = "<img alt='Busy' src='/assets/Haters_Gonna_Hate.gif' width = '40' align='right' >"
+$("#search_beer").keypress(function(event) {
+  if ( event.which == ENTER ) {
+     event.preventDefault();
+     var text = $('#search_beer').val().trim();
+     if ( text ) {
+       beer_count++;
+       $('#search_beer').val('');
+       $('<li>'+text+'</li>').addClass('beers')
+       .prepend(image).hide().insertAfter('input:first').slideDown('slow');
+       $.ajaxSetup({
+         beforeSend: function(xhr) {
+           xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'));
+         }
+       });
+       $.ajax({
+         type: "POST",
+         url: "/search",
+         data: {search: text}
+       }).done(function( msg ) {
+         alert( "Data Saved: " + msg );
+       });
+     }
+   }
+});
+
+// $(function () {
+//     $('li').live('click', function () {
+//         var input = $('<input />', {'type': 'text', 'name': 'name', 'value': $(this).html()});
+//         $(this).parent().append(input);
+//         $(this).remove();
+//         input.focus();
+//     });
+//     
+//     $('input').live('blur', function () {
+//         $(this).parent().append($('<li />').addClass('beers').html($(this).val()));
+//         $(this).remove();
+//     });
+// });
+</script>
