--- a/app/views/beers/_beer.html.erb
+++ b/app/views/beers/_beer.html.erb
@@ -1,3 +1,6 @@
-<div class="beer">
-  <span class="beer-search"><%= beer %></span>
-</div>
+<li class="beers" >
+  <%= beer.name %>
+  <% beer.result.each do |key, result| %>
+    <%= content_tag(:span, result)%>
+  <% end %>
+</li>
