--- a/app/views/beers/_beer_list.html.erb
+++ b/app/views/beers/_beer_list.html.erb
@@ -6,27 +6,20 @@
     <% flash.each do |key, value| %>
       <%= content_tag(:div, value, class: "alert alert-#{key}") %>
     <% end %>
-    <input id="search_beer" placeholder="Beer..." name="search[beer]" size="30" type="text">
-    
-    <!-- <li class="beers" >
-          test
-          <img alt='Busy' src='/assets/Haters_Gonna_Hate.gif' width = '40' align='right' >
-          <nobr style='color: #999;margin-left:20px;'>Did you mean</nobr>
-          <a href=#>some beer?</a>
-        </li> -->
+    <input id="search_beer" placeholder="Beer..." name="search[beer]" size="30" type="text">    
   </div>
 </div>
 
 <script>
 var ENTER = 13;
-var beer_count = 0
+var beer_number = 0
 var image = "<img alt='Busy' src='/assets/Haters_Gonna_Hate.gif' width = '40' align='right' >"
 $("#search_beer").keypress(function(event) {
   if ( event.which == ENTER ) {
      event.preventDefault();
      var text = $('#search_beer').val().trim();
      if ( text ) {
-       beer_count++;
+       beer_number++;
        $('#search_beer').val('');
        $('<li>'+text+'</li>').addClass('beers')
        .prepend(image).hide().insertAfter('input:first').slideDown('slow');
@@ -38,9 +31,11 @@ $("#search_beer").keypress(function(event) {
        $.ajax({
          type: "POST",
          url: "/search",
-         data: {search: text}
+         //dataType: 'json',
+         data: {search: text, id: beer_number}
        }).done(function( msg ) {
-         alert( "Data Saved: " + msg );
+         var obj = jQuery.parseJSON(msg);
+         $('li').eq(obj.id - beer_number).replaceWith(obj.result);
        });
      }
    }
