--- a/app/views/layouts/_debug.html.erb
+++ b/app/views/layouts/_debug.html.erb
@@ -8,5 +8,5 @@
   Sign in result: <%= @sign_in_result %>
   Username: <%= @session.username %>
   Password: <%= @password %>
-  User cookie present? <%= @user_cookie_present %>
+  User cookie present? <%= @user_signed_in %>
 </pre>
