--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,21 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
-  <script src="http://api.jquery.com/scripts/events.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
+  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <%= yield %>
-		<%= render 'layouts/debug' if Rails.env.development? %>
-		<%= debug(params) if Rails.env.development? %>
-  </div>
+  <div data-role="page" id="first">
+    <%= render 'layouts/header'%>
+    <div data-role="content">
+      <%= yield %>
+      <%= render 'layouts/debug' if Rails.env.development? %>
+      <%= debug(params) if Rails.env.development? %>
+    </div><!-- /content -->
+    <div data-role="footer">
+      <h6></h6>
+    </div><!-- /footer -->
+  </div><!-- /page -->
 </body>
 </html>
