Add venue support

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,6 @@
 <div data-role="header">
   <% if @user_signed_in %>
-    <select id="select-choice-1"  data-native-menu="false">
-      <option value="standard">Beer</option>
-      <option value="rush">Venue</option>
-    </select>
-    <select id="select-choice-2"  data-native-menu="false">
+    <select id="select-choice"  data-native-menu="false">
       <option value="standard">Search</option>
       <option value="rush">Settings</option>
       <option value="rush">Log Out</option>
