--- a/app/views/beers/_beer.html.erb
+++ b/app/views/beers/_beer.html.erb
@@ -1,6 +1,6 @@
-<div data-role="collapsible" data-content-theme="c">
+<div data-role="collapsible" data-content-theme="c" class="beer<%= beer.id if beer.id%>">
   <h3><%= beer.result[:untappd] %></h3>
 	<% beer.result.each do |key, result| %>
-    <p><%= content_tag(:span, result, :class => key) unless key == :untappd %></p>
+    <%= content_tag(:p, result, :class => key) %> 
   <% end %>
 </div>
