--- a/app/views/beers/_beer_list.html.erb
+++ b/app/views/beers/_beer_list.html.erb
@@ -1,6 +1,6 @@
-<div data-role="controlgroup" data-type="horizontal" align="center">
-  <a href="index.html" data-role="button">Beer</a>
-  <a href="index.html" data-role="button">Venue</a>
+<div data-role="controlgroup" data-type="horizontal">
+  <a title="beer" href="#" data-role="button" class="ui-btn-active">Beer</a>
+  <a title="venue" href="#" data-role="button">Venue</a>
 </div>
 
 <input id="search_beer" placeholder="Beer..." name="search[beer]" size="30" type="text" autocorrect="off" autocapitalize="off">
