--- a/app/views/layouts/_debug.html.erb
+++ b/app/views/layouts/_debug.html.erb
@@ -1,12 +1,12 @@
 <pre class="debug_dump">
-<%= @debug_string.html_safe %>
+<%= @debug_string.html_safe if @debug_string %>
 </pre>
 
 <pre class="debug_dump">
   Cookie: <%= session %>
   params: <%= params %>
   Sign in result: <%= @sign_in_result %>
-  Username: <%= @session.username %>
+  Username: <%= @session.username if @session%>
   Password: <%= @password %>
   User cookie present? <%= @user_signed_in %>
 </pre>
