--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -8,5 +8,8 @@
 
 <input id="search_beer" placeholder="Beer..." name="search[beer]" size="30" type="text" autocorrect="off" autocapitalize="off">
 
-<div data-role="collapsible-set">
-</div> 
+<div data-role="collapsible-set" class="beers">
+</div>
+
+<div data-role="collapsible-set" class="venues">
+</div>
