--- a/app/views/beers/_beer.html.erb
+++ b/app/views/beers/_beer.html.erb
@@ -1,6 +1,21 @@
-<div data-role="collapsible" data-content-theme="c" class="beer<%= beer.id if beer.id%>">
-  <h3><%= beer.result[:untappd] %></h3>
-	<% beer.result.each do |key, result| %>
-    <%= content_tag(:p, result, :class => key) %> 
+<div data-role="collapsible" data-content-theme="c" class=<%= "beer#{beer.id if beer.id}"%> >
+  <% if beer.brewery.nil? || beer.name.nil? %>
+    <%= content_tag(:h3, "No search results") %>
+  <% else %>
+    <%= content_tag(:h3, beer.brewery + ' ' + beer.name) %>
   <% end %>
+  
+  <%= content_tag(:p, "Searched for #{beer.search}") %>
+  
+  <%= content_tag(:p, "Spell checked to #{beer.spell_check}") if beer.spell_check %>
+  
+  <% if beer.brewery && beer.name %>
+    <% if beer.had %>
+      <%= content_tag(:p, "You have had  #{beer.brewery + ' ' + beer.name} already") %>
+    <% else %>
+      <%= content_tag(:p, "You have not had #{beer.brewery + ' ' + beer.name} yet") %>
+    <% end %>
+  <% end %>
+  
+  <%= content_tag(:p, beer.debug_string) if Rails.env.development? %>
 </div>
