--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -6,7 +6,7 @@
 	</ul>
 </div>
 
-<input id="search_beer" placeholder="Beer..." name="search[beer]" size="30" type="text" autocorrect="off" autocapitalize="off">
+<input id="search" placeholder="Beer..." name="search[beer]" size="30" type="text" autocorrect="off" autocapitalize="off">
 
 <div data-role="collapsible-set" class="beers">
 </div>
