--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,6 @@
       <%= link_to "Back", root_path %>
     <% end %>
     <h1><%= yield(:title) %></h1>
-    <%= link_to "Log Out", logout_path %>
+    <%= link_to "Log Out", logout_path, "data-icon" => "delete", "class" => "ui-btn-right" %>
   <% end %>
 </div>
