--- a/app/views/venues/_venue.html.erb
+++ b/app/views/venues/_venue.html.erb
@@ -1,8 +1,14 @@
 <div data-role="collapsible" data-content-theme="c" class="venue<%= venue.id %>">
-  <h3><%= venue.result[:beer_menus] %></h3>
-	<% venue.result.each do |key, result| %>
-    <%= content_tag(:p, result, :class => key) %>
+  <% if venue.name.nil? %>
+    <%= content_tag(:h3, "No search results") %>
+  <% else %>
+    <%= content_tag(:h3, venue.name) %>
   <% end %>
+
+  <%= content_tag(:p, "Searched for #{venue.search}") if venue.search %>
+
+  <%= content_tag(:p, "Spell checked to #{venue.spell_check}") if venue.spell_check %>
+
   <div data-role="collapsible-set" class="venue<%= venue.id %>_beers">
     <%= render venue.beers unless venue.beers.nil?%>
   </div>
