Add instructions to foursquare connection

--- a/app/views/beers/settings.html.erb
+++ b/app/views/beers/settings.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Settings") %>
 <h1>Settings</h1>
 <% if @foursquare %>
-  <%= content_tag(:p, "Your Foursquare account is connected") %>
+  <%= content_tag(:p, "Your Foursquare account is connected. Check in with the word 'beer' and New Beer 4 me will comment on your checkin with new beer recommendations.") %>
   <a href="/disable" data-role="button">Disconnect</a>
 <% else %>
   <%= content_tag(:a, image_tag("foursquare-connect.png"), href: "#", class: "foursquare") %>
